# pypact

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  run_coverage  schema.json  setup.py  tox.ini  update_on_pypi.sh
.github/workflows/: greetings.yml  label.yml  python-package.yml  python-publish.yml
docs/: about.rst  conf.py  index.rst  installation.rst
examples/: animatenuclidechart.py  changefilesfile.py  compareplots.py  doserates.py  findspectrallines.py  fullfispactrun.py  gammaspectrum.py  gammaspectrumanimation.py  groupstructure.py  outputjson.py  plotcumullines.py  plotnuclideheat.py  plotspectrallines.py  printlib4.py  printlib5.py  readfilesfile.py  rundatajson.py  tocsv.py  writefilesfile.py  writefluxesfile.py  writeinputfile.py
examples/csv/: tocsv.py
examples/files/: filesfileexample  filesfileexamplenew  test.i
examples/groupconvert/: 66_to_709_compare.py  fluxes172.in  fluxes66.in  fluxes709.in
examples/groupstructure/: groupstructure.py
examples/inputcreation/: changefilesfile.py  writefilesfile.py  writefluxesfile.py  writefluxesfilefromlib.py  writeinputfile.py
examples/libraries/: plotallspectra.py  spectracompare.py  spectralist.py
examples/outputplotting/: activity_vs_time.py  (+9 more)
pypact/: __init__.py  filerecord.py  reader.py  runner.py
reference/: gamma_spectra_read_bug.out  test.i  test121.out  test2.i  test3.i  test4.i  test5.i  test91.out  test_dpa.out
scripts/: run_pylint.py  update_on_pypi.sh
tests/: testerbase.py  testsuite.py
(+103 files in other folders)
