[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypact"
version = "1.3.7"
description = "The package for reading and manipulating the fispact output text file."
readme = "README.md"
requires-python = ">=3.8"
license =  "Apache-2.0"
authors = [
    { name = "UKAEA" },
    { name = "Thomas Stainer" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "numpy"
]

[project.scripts]
fispactconverter = "pypact.tools.fispactconverter:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["pypact", "pypact.*"]

[tool.setuptools.package-data]
pypact = ["library/data/*.json"]